* Fixed the bug that led to #5119. There was a race condition in the read path   as soon as a second thread got into the game: if a thread was notified that   a message is ready, another thread could call read_port() and steal it before   the previous thread could claim it. The "Extensions" menu still doesn't seem   to work, but I would guess that is unrelated. * The threads of the test app never exited, as read_port() returns the number   of bytes it read, not just a status.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@34681 a95241bf-73f2-0310-859d-f6bbb57e9c96